# PJT11_-_Python-

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/database/: database.py
app/models/: models.py  schemas.py
app/routers/: problems.py  submissions.py
app/services/: code_evaluator.py  gemini_service.py
frontend/static/: admin.js  main.js  style.css
frontend/templates/: admin.html  index.html
